[doc] Update release notes
- remove release candidate info box
- unify "Updated PMD Designer" sections
- remove apex jorje update
- unify "Changed: Apex ..." sections
- add missing Java 22 section